<resources>
    <string name="app_name" />
    <string name="time_picker_year">年</string>
    <string name="time_picker_month">月</string>
    <string name="time_picker_day">日</string>
    <string name="time_picker_hour">时</string>
    <string name="time_picker_min">分</string>
    <string name="time_picker_title">选择时间</string>
    <string name="time_picker_finish">确认</string>
    <string name="time_picker_title_default">设置</string>
    <string name="time_picker_cancel">取消</string>
    <string name="time_picker_unlimited">不限</string>

    <string name="January">一月份</string>
    <string name="February">二月份</string>
    <string name="March">三月份</string>
    <string name="April">四月份</string>
    <string name="May">五月份</string>
    <string name="June">六月份</string>
    <string name="July">七月份</string>
    <string name="August">八月份</string>
    <string name="September">九月份</string>
    <string name="October">十月份</string>
    <string name="November">十一月份</string>
    <string name="December">十二月份</string>

    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
</resources>
