<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@color/picker_white">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="22dip"
            android:text="@string/time_picker_cancel"
            android:textColor="@color/picker_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tx_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip"
            android:text="@string/time_picker_finish"
            android:textColor="@color/picker_text_color"
            android:textSize="15sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/picker_gray_divider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip">

            <FrameLayout
                android:layout_width="110dip"
                android:layout_height="wrap_content">

                <com.widget.picker.LoopView
                    android:id="@+id/loop_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dip"
                    android:text="@string/time_picker_year"
                    android:textColor="@color/picker_text_color" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.widget.picker.LoopView
                    android:id="@+id/loop_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dip"
                    android:text="@string/time_picker_month"
                    android:textColor="@color/picker_text_color" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="110dip"
                android:layout_height="wrap_content">

                <com.widget.picker.LoopView
                    android:id="@+id/loop_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="15dip"
                    android:text="@string/time_picker_day"
                    android:textColor="@color/picker_text_color" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dip"
            android:background="@color/picker_text_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dip"
            android:background="@color/picker_text_color" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#E2E2E2" />

</LinearLayout>